# PyShop

./: .coverage  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/versions/: 24fcd4d656d6_add_a_column.py  8614ffc638fb_create_account_table.py
app/: main.py
app/database/: db_connection.py
app/errors/: custom_error.py  errors_model.py
app/handlers/: article_handler.py
app/models/dao/: article_model_dao.py
app/models/dto/: article_model_dto.py
app/models/error/: error_model.py
app/services/: articles_service.py
app/util/: converter.py
archive/errors/: errors_model.py
tests/: article_handler_test.py  articles_service_test.py  converter_test.py  db_connection_test.py  main_test.py
