[tool.poetry]
name = "pyshop"
version = "0.4.1"
description = "A Python Backend for an e-commerce shop"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [project]
# name = "PyShop"
# version = "0.3.1"
